# rust-axum-seaorm-demo

./: Cargo.toml  Dockerfile  docker-compose.yaml
migration/src/: lib.rs  m20250817_151638_create_users.rs  m20250817_185935_update_users.rs  m20250818_175044_create_todos.rs
src/: main.rs
src/auth/: backend.rs  helper.rs  mod.rs  user_auth.rs
src/entities/: helper.rs  mod.rs  prelude.rs  todos.rs  users.rs
src/routes/: helper.rs  mod.rs  todos.rs  users.rs
