[package]
name = "axum-seaorm-demo"
version = "0.1.0"
edition = "2024"

[dependencies]
# Web
axum = "0.8.4"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6.6", features = ["trace", "cors"] }

# ORM
sea-orm = { version = "1.1.0", features = [
  "sqlx-postgres",
  "runtime-tokio-rustls",
  "macros"
]}

# Nice-to-haves
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dotenvy = "0.15"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sha2 = "0.10.9"